--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-native-refresh-loadmore-scrollview",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "react-native-refresh-loadmore-scrollview written in java and javascript for android support",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \\\"Error: no test specified\\\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,6 @@
   "author": {
     "name": "fangtao",
     "email": "fangtaodaxia@gmail.com"
-  },
-  "engines": {
-    "node": ">=4"
   },
   "license": "ISC",
   "bugs": {
